@@ -1,3 +1,6 @@
+AP-2008-02-06-0: Bugfix:    Correct the field name in dbwriter.xml for mysql 
+                            to ju_exit_status
+
 RD-2008-02-04-0: CVS:       Created V62alpha1_TAG
 -------------------------------------------------
 
